--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@
 *.class
 */*.class
 /bin/
+/build/
+
+.settings/.jsdtscope
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.jpt.core.prefs
+.settings/org.eclipse.wst.common.component
+.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
+.settings/org.eclipse.wst.common.project.facet.core.xml
+.settings/org.eclipse.wst.jsdt.ui.superType.container
+.settings/org.eclipse.wst.jsdt.ui.superType.name
+src/META-INF/persistence.xml
+WebContent/META-INF/MANIFEST.MF
+WebContent/WEB-INF/glassfish-web.xml
